--- a/src/app/rendement/declaration-recolte/declaration-recolte.component.scss
+++ b/src/app/rendement/declaration-recolte/declaration-recolte.component.scss
@@ -1,3 +1,14 @@
 .p-calendar .p-datepicker {
     min-width: 10% !important; 
 }
+.p-inputtext-sm .p-inputtext {
+    font-size: 0.875rem !important;
+    padding: 0.4375rem 0.4375rem !important;
+    width: 50% !important;
+}
+.col-md {
+    margin-bottom: 15px!important;
+    padding-right: 5px;
+    padding-left: 5px;
+    width:12.5%;
+}
