--- a/src/app/error-pages/error500/error500.component.html
+++ b/src/app/error-pages/error500/error500.component.html
@@ -6,13 +6,13 @@
           <h1 class="display-1 mb-0">500</h1>
         </div>
         <div class="col-lg-6 error-page-divider text-lg-left pl-lg-4">
-          <h2>SORRY!</h2>
-          <h3 class="font-weight-light">Internal server error!</h3>
+          <h2>Désolé!</h2>
+          <h3 class="font-weight-light">Erreur au niveau du serveur!</h3>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-12 text-center mt-xl-2">
-          <a class="text-white font-weight-medium" routerLink="/dashboard">Back to home</a>
+          <a class="text-white font-weight-medium" routerLink="/rendement">Revenir à la page principale</a>
         </div>
       </div>
     </div>
