--- a/src/app/rendement/declaration-recolte/declaration-recolte.component.scss
+++ b/src/app/rendement/declaration-recolte/declaration-recolte.component.scss
@@ -12,3 +12,14 @@
     padding-left: 5px;
     width:12.5%;
 }
+.p-datatable .p-datatable-header{
+@mixin rtl{
+    background: #f8f9fa;
+    color: #495057;
+    border: 1px solid #e9ecef;
+    border-width: 1px 0 1px 0;
+    padding: 0.5rem 0.5rem;
+    font-weight: 600;
+    padding-left: 82%;
+  }
+}
